@@ -368,7 +368,7 @@ fonts in the new PDF file
 
 "pdftopdf" finds fonts to embed by fontconfig library.
 "pdftopdf" now embed only TrueType format fonts.
-PDF Standard fonts are not embedded .
+PDF Standard fonts are not embedded.
 
 Note: Do not embed fonts that the font licenses inhibit embedding.
 
@@ -378,13 +378,34 @@ Many of these operators and sections are just ignored.
 Some of these may be output, but those functions are not assured.
 Encryption feature is not supported.
 
-2. LICENSE
+2. NATIVE PDF PRINTER SUPPORT
 
-Almost source files are under MIT like license. However, "pdftopdf" links
-some "poppler" libraries, and these files are under GNU public license.
-See copyright notice of each file for details.
+pdftopdf introduces native PDF printer support to CUPS for the first
+time. PPD files must have a line
 
-3. COMMAND LINE
+*cupsFilter: "application/vnd.cups-pdf 0 -"
+
+and use the "*JCLToPDFInterpreter:" keyword, for example:
+
+*JCLBegin:           "<1B>%-12345X@PJL JOB<0A>"
+*JCLToPDFInterpreter: "@PJL ENTER LANGUAGE = PDF <0A>"
+*JCLEnd:             "<1B>%-12345X@PJL EOJ <0A><1B>%-12345X"
+
+They MUST NOT accept PostScript as input data format and will not work
+with stock CUPS. They will need cups-filters (which implements the PDF-
+based printing workflow) to work.
+
+Options must not be implemented by specifying PostScript code to
+inject.  They must be injecting JCL code ("*JCLOpenUI:
+... ... *JCLCloseUI: ...").
+
+3. LICENSE
+
+Almost all source files are under MIT like license. However,
+"pdftopdf" links some "poppler" libraries, and these files are under
+GNU public license.  See copyright notice of each file for details.
+
+4. COMMAND LINE
 
 "pdftopdf" is a CUPS filter, and the command line arguments, environment
 variables and configuration files are in accordance with the CUPS filter
@@ -406,7 +427,7 @@ CUPS options defined in <options> are delimited by space. Boolean
 type CUPS option is defined only by the option key, and other type
 CUPS option are defined by pairs of key and value, <key>=<value>.
 
-4. COMMAND OPTIONS
+5. COMMAND OPTIONS
 
 "pdftopdf" accepts the following CUPS standard options;
 
@@ -465,11 +486,11 @@ pdftopdfJCLBegin
   Force "pdftopdf" to create JCL info for the following PDF filter
   "pdftoopvp".
 
-5. INFORMATION FOR DEVELOPERS
+6. INFORMATION FOR DEVELOPERS
 
 Following information is for developers, not for driver users.
 
-5.1 Options handled by a printer or "pdftopdf"
+6.1 Options handled by a printer or "pdftopdf"
 
 Following options are handled by a printer or "pdftopdf".
   Collate, Copies, Duplex, OutputOrder
@@ -568,7 +589,7 @@ if (Duplex && OutputOrder == Reverse && !device_outputorder) {
 
 soft_copies = device_copies > 1 ? 1 : Copies;
 
-5.2 JCL
+6.2 JCL
 
 When you print PDF files to a PostScript(PS) printer, you can specify
 device options in PS. In this case, you can write PS commands in a PPD file
@@ -591,8 +612,26 @@ as follows;
 *JCLFrameBufferSize Legal: '@PJL SET PAGEPROTECT = LGL<0A>'
 *JCLCloseUI: *JCLFrameBufferSize
 
-Because PDF cannot specify device options in a PDF file, you have to define
-all the device options as JCLs.
+For PostScript printers all these options are handled by the pdftops
+filter which is the PostScript printer driver in the PDF-based
+printing workflow.
+
+If you have a native PDF printer you cannot use options which inject
+PostScript code into the data stream, you have to define all options
+with JCL. Only in this case pdftopdf adds the JCL header and trailer
+to the PDF job. Native PDF PPDs with JCL options are recognized by the
+"*JCLToPDFInterpreter:" keyword, for example with the following lines:
+
+*JCLBegin:           "<1B>%-12345X@PJL JOB<0A>"
+*JCLToPDFInterpreter: "@PJL ENTER LANGUAGE = PDF <0A>"
+*JCLEnd:             "<1B>%-12345X@PJL EOJ <0A><1B>%-12345X"
+
+To get the correct CUPS filter chain for them, they need the following
+line:
+
+*cupsFilter: "application/vnd.cups-pdf 0 -"
+
+and NO "*cupsFilter:" line which accepts PostScript input.
 
 When a printer does not support PS nor PDF, you can use Ghostscript (GS).
 In this case, you can specify device options like a PS printer.
@@ -605,7 +644,7 @@ appropriate to specify device options.
 So, "pdftopdf" handles this case as follows;
 (In following pseudo program, JCL option is a option specified with JCLOpenUI)
 
-if (Both JCLBegin and JCLToPSInterpreter are specified in the PPD file) {
+if (Both JCLBegin and JCLToPDFInterpreter are specified in the PPD file) {
     output JCLs that marked JCL options.
 }
 
@@ -634,7 +673,7 @@ what you should do is to add the following line in the PPD file;
 *pdftopdfJCLBegin: "pdftoopvp jobInfo:"
 
 Note:
-  If you specify JCLBegin, you have to specify JCLToPSInterpreter as well.
+  If you specify JCLBegin, you have to specify JCLToPDFInterpreter as well.
 
 Note:
   When you need to specify the value which is different from the choosen
@@ -663,7 +702,7 @@ Note:
   *pdftopdfJCLPageSize Letter/US Letter: "PS=LT;"
   *CloseUI: *PageSize
 
-5.3 Special PDF comment
+6.3 Special PDF comment
 
 "pdftopdf" outputs the following special comments from the 4th line in the
 created PDF data.
@@ -671,7 +710,7 @@ created PDF data.
 %%PDFTOPDFNumCopies : <copies> --- <copies> specified Number of Copies
 %%PDFTOPDFCollate : <collate> --- <collate> is true or false
 
-5.4 Temporally files location
+6.4 Temporally files location
 
 "pdftopdf" creates temporally files if needed.　Temporary files are created
 in the location specified by TMPDIR environment　variable. Default location
