@@ -3,13 +3,16 @@ CHANGES.txt - OpenPrinting CUPS Filters v1.0.6 - 2012-03-16
 
 CHANGES IN V1.0.6
 
-	- Make sure that "make clean" and "make distclean" also work if
-	  Makedefs does not exist (Debian bug #663564).
+	- pdftopdf: Added support for native PDF printers, add JCL (PJL) 
+	  options only if the PDF has the "*JCLToPDFInterpreter:" keyword.
+	- Updated README.txt for the new native PDF printer support.
 	- texttopdf: A lot of internal rework; also split up into more files
 	- texttopdf: Fixed many bugs on the way
 	- texttopdf: Added support for CFF-flavoured OTFs; for these
           subsetting is not yet implemented, full embedding is done instead
 	- texttopdf: Adapted and improved fontconfig font selection
+	- Make sure that "make clean" and "make distclean" also work if
+	  Makedefs does not exist (Debian bug #663564).
 
 CHANGES IN V1.0.5
 
